--- a/FEM_home.html
+++ b/FEM_home.html
@@ -87,8 +87,9 @@
 			<p class="text-success ans" id="MFAB"></p><br>
 			<p class="text-success ans" id="MFBA"></p>
 		</div>
-		<footer>
+		<footer class="text-center">
 			<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/80x15.png" /></a>
+			</br />
 			<span class="text-muted"> Fixed End Moment Calculator by Clara Jordan (czmj). Built with Love in <a href="http://www.getbootstrap.com">Bootstrap</a> and Javascript</span>
 		</footer>
 	</div> <!--end of container-->
