fixed a few errors.

--- a/index.html
+++ b/index.html
@@ -89,8 +89,9 @@
 		</div>
 		<footer class="text-center">
 			<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/80x15.png" /></a>
-			</br />
+			<br />
 			<span class="text-muted"> Fixed End Moment Calculator by Clara Jordan (czmj). Built with Love in <a href="http://www.getbootstrap.com">Bootstrap</a> and Javascript</span>
 		</footer>
 	</div> <!--end of container-->
 </body>
+</html>
