Some very small html/css changes

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 		</div>
 
 		<div class="col-md-3"> <!--Setup panel-->
-			<div class="panel panel-default">
+			<div class="container col-md-12">
 			  	<h3>Beam length:</h3>
-			    <input id="l" class="form-control" type="text" placeholder="l (m)"><br>
+			    <form><input id="l" class="form-control text" type="text" placeholder="l (m)"><br></form>
 			</div>	
 		</div>
 		<div class="col-md-9"> <!--Add a load panel-->
@@ -63,11 +63,11 @@
 						<div class="container col-md-12">
 						    <label for="W" class="col-sm-2 control-label">W (kN)</label>
 						    <div class="col-sm-10">
-						    	<input id="W" class="form-control" type="text" placeholder="W (load in kN)"><br>
+						    	<input id="W" class="form-control text" type="text" placeholder="W (load in kN)"><br>
 						    </div>
 						    <label for="a" class="col-sm-2 control-label">alpha (decimal)</label>
 							<div class="col-sm-10">
-							   	<input id="a" class="form-control" type="text" placeholder="alpha"><br>
+							   	<input id="a" class="form-control text" type="text" placeholder="alpha"><br>
 						    </div>
 						</div>
 					</form>
@@ -88,9 +88,9 @@
 			<p class="text-success ans" id="MFBA"></p>
 		</div>
 		<footer class="text-center">
-			<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/80x15.png" /></a>
-			<br />
-			<span class="text-muted"> Fixed End Moment Calculator by Clara Jordan (czmj). Built with Love in <a href="http://www.getbootstrap.com">Bootstrap</a> and Javascript</span>
+			<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br />
+
+			<span class="text-muted"> Fixed End Moment Calculator by Clara Jordan (czmj). Built with Love in <a href="http://www.getbootstrap.com">Bootstrap</a> and Javascript. <a href ="https://github.com/tdobson/FEM">Find it on GitHub!</a></span>
 		</footer>
 	</div> <!--end of container-->
 </body>
