cleaned up form input syntax

--- a/index.html
+++ b/index.html
@@ -58,23 +58,22 @@
 				<div id="inputs" class="container col-md-12"><!--Value input-->
 					<form>
 						<label for="l" class="col-md-2 control-label">Beam length</label>
-				    	<div class="container col-md-9">
-				    		<div class="input-group">
-                    			<input id="l" class="form-control text" type="text" placeholder="Beam length (m)"><br>
-                    			<span class="input-group-addon">m</span>
-                			</div><br>
-						</div>	
-						<label for="W" class="col-md-2 control-label">W (kN)</label>
-					    <div class="col-md-9">
-					    	<div class="input-group">
-					    		<input id="W" class="form-control text" type="text" placeholder="W (load in kN)">
+					    	<div class="container col-md-9 input-group">
+		                    			<input id="l" class="form-control text" type="text" placeholder="Beam length (m)"><br />
+		                    			<span class="input-group-addon">m</span>
+	                			</div>
+					<br />
+						<label for="W" class="col-md-2 control-label">W</label>
+						<div class="container col-md-9 input-group">
+					    		<input id="W" class="form-control text" type="text" placeholder="W (load in kN)"><br />
 					    		<span class="input-group-addon">kN</span>
-							</div><br>
 					    </div>
-					    <label for="a" class="col-md-2 control-label">alpha (decimal)</label>
-						<div class="col-md-10">
-						   	<input id="a" class="form-control text" type="text" placeholder="alpha (decimal length along beam)"><br>
-					    </div>
+					<br />
+						<label for="a" class="col-md-2 control-label">alpha</label>
+						<div class="container col-md-9 input-group">
+						   	<input id="a" class="form-control text" type="text" placeholder="alpha (decimal length along beam)"><br />
+                                                        <span class="input-group-addon">(decimal)</span>
+						</div>
 					</form>
 				</div>
 			</form>
