--- a/index.html
+++ b/index.html
@@ -62,17 +62,17 @@
 		                    			<input id="l" class="form-control text" type="text" placeholder="Beam length (m)"><br />
 		                    			<span class="input-group-addon">m</span>
 	                			</div>
-					<br />
+						<br />
 						<label for="W" class="col-md-2 control-label">W</label>
 						<div class="container col-md-9 input-group">
 					    		<input id="W" class="form-control text" type="text" placeholder="W (load in kN)"><br />
 					    		<span class="input-group-addon">kN</span>
-					    </div>
-					<br />
+						</div>
+						<br />
 						<label for="a" class="col-md-2 control-label">alpha</label>
 						<div class="container col-md-9 input-group">
 						   	<input id="a" class="form-control text" type="text" placeholder="alpha (decimal length along beam)"><br />
-                                                        <span class="input-group-addon">(decimal)</span>
+                                                        <span class="input-group-addon">decimal</span>
 						</div>
 					</form>
 				</div>
