--- a/index.html
+++ b/index.html
@@ -55,24 +55,30 @@
 					<label><input name="img" id="udl_2" type="radio"><img src="udl_2.png" class="models" onclick="scrollInputs()"></label>
 					<label><input name="img" id="mom" type="radio"><img src="mom.png" class="models" onclick="scrollInputs()"></label>
 				</div>
-				<div id="inputs" class="container col-md-12"><!--Value input-->
+				<div id="inputs" class="container col-md-12 form-group-lg"><!--Value input-->
 					<form>
-						<label for="l" class="col-md-2 control-label">Beam length</label>
-					    	<div class="container col-md-9 input-group">
-		                    			<input id="l" class="form-control text" type="text" placeholder="Beam length (m)"><br />
-		                    			<span class="input-group-addon">m</span>
-	                			</div>
-						<br />
-						<label for="W" class="col-md-2 control-label">W</label>
-						<div class="container col-md-9 input-group">
-					    		<input id="W" class="form-control text" type="text" placeholder="W (load in kN)"><br />
-					    		<span class="input-group-addon">kN</span>
+						<div class="row">
+							<label for="l" class="col-md-2 control-label">Beam length</label>
+						    	<div class="col-xs-2 input-group">
+			                    			<input id="l" class="form-control text" type="text" placeholder="Beam length (m)"><br />
+		        	            			<span class="input-group-addon">m</span>
+	                				</div>
 						</div>
 						<br />
-						<label for="a" class="col-md-2 control-label">alpha</label>
-						<div class="container col-md-9 input-group">
-						   	<input id="a" class="form-control text" type="text" placeholder="alpha (decimal length along beam)"><br />
-                                                        <span class="input-group-addon">decimal</span>
+						<div class="row">
+							<label for="W" class="col-md-2 control-label">W</label>
+							<div class="col-xs-2 input-group">
+						    		<input id="W" class="form-control text" type="text" placeholder="W (load in kN)"><br />
+						    		<span class="input-group-addon">kN</span>
+							</div>
+						</div>
+						<br />
+						<div class="row">
+							<label for="a" class="col-md-2 control-label">alpha</label>
+							<div class="col-xs-2 input-group">
+							   	<input id="a" class="form-control text" type="text" placeholder="alpha (decimal length along beam)"><br />
+                        	                                <span class="input-group-addon">decimal</span>
+							</div>
 						</div>
 					</form>
 				</div>
