--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no">
 
-<title>FEM Calculation App</title>
+<title>Clara's Calculators</title>
 
 <!--FEM script-->
 	<script type="text/javascript" src="FEM.js"></script>	
@@ -29,12 +29,12 @@
 		<nav class="navbar navbar-default navbar-fixed-top" role="navigation"><!--navbar-->
 			<div class="container">
 				<div class="navbar-header">
-					<a href="#" class="navbar-brand">Clara's Civ Calculators</a>			
+					<a href="#" class="navbar-brand">Clara's Calculators</a>			
 				</div>
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       			<ul class="nav navbar-nav">
         			<li class="active"><a href="#">FEMs</a></li>
-        			<li><a href="#">Other Thing</a></li>
+        			<li><a href="3Dpythag.html">3D Pythagoras</a></li>
       			</ul>
 			</div>
 		</nav>		
@@ -57,30 +57,28 @@
 				</div>
 				<div id="inputs" class="container col-md-12 form-group-lg"><!--Value input-->
 					<h2> Input values:</h2></br>
-					<form>
-						<div class="row">
-							<label for="l" class="col-md-2 control-label">Beam length</label>
-						    	<div class="col-xs-3 input-group">
-			                    			<input id="l" class="form-control text" type="text" placeholder="Beam length (m)"><br />
-		        	            			<span class="input-group-addon">m</span>
-	                				</div>
+					<div class="row">
+						<label for="l" class="col-md-2 control-label">Beam length</label>
+					    	<div class="col-xs-3 input-group">
+			                   	<input id="l" class="form-control text" type="text" placeholder="Beam length (m)"><br />
+		        	           	<span class="input-group-addon">m</span>
+	                		</div>
+					</div>
+					<br />
+					<div class="row">
+						<label for="W" class="col-md-2 control-label">W</label>
+						<div class="col-xs-3 input-group">
+					    	<input id="W" class="form-control text" type="text" placeholder="W (load in kN)"><br />
+					    	<span class="input-group-addon">kN</span>
 						</div>
-						<br />
-						<div class="row">
-							<label for="W" class="col-md-2 control-label">W</label>
-							<div class="col-xs-3 input-group">
-						    		<input id="W" class="form-control text" type="text" placeholder="W (load in kN)"><br />
-						    		<span class="input-group-addon">kN</span>
-							</div>
+					</div>
+					<br />
+					<div class="row">
+						<label for="a" class="col-md-2 control-label">alpha</label>
+						<div class="col-xs-3 input-group">
+						   	<input id="a" class="form-control text" type="text" placeholder="alpha (decimal length along beam)"><br />
 						</div>
-						<br />
-						<div class="row">
-							<label for="a" class="col-md-2 control-label">alpha</label>
-							<div class="col-xs-3 input-group">
-							   	<input id="a" class="form-control text" type="text" placeholder="alpha (decimal length along beam)"><br />
-							</div>
-						</div>
-					</form>
+					</div>
 				</div>
 			</form>
 			<div class="container col-md-12"><!--buttons-->
